# statsmed

./: .dockerignore  .env.example  .gitignore  Caddyfile.ui.example  Dockerfile  README-NEW-UI.md  README.md  docker-compose.caddy.yml  docker-compose.dev.yml  docker-compose.yml  env.ui.example  pyproject.toml  run-web-app.sh  setup.py  the_core.py  wsgi.py
RSNAAbstract/: RSNA_abstract-Data.txt  RSNA_abstract.md
backend/: requirements.txt
backend/app/: auth.py  main.py
backend/app/db/: database.py  models.py
backend/app/routers/: auth.py  data.py  quality.py
backend/app/services/: quality_engine.py  (+1 more)
examples/example1/: Tests_normal_distribution.ipynb
examples/example10/: Poisson_NegBin_Rate_Change.ipynb  ex10.csv
examples/example2/: DescriptiveStatistic.ipynb  ex2.csv
examples/example3/: Corr_subplots.tiff  Correlations.ipynb  ex3.csv
examples/example4/: Comparision_continuous.ipynb
examples/example5/: Bland-Altman-Plots.ipynb  Bland_Altman_subplots.tiff
examples/example6/: Bland-Altman-Plots.ipynb  Boxplots.ipynb
examples/example7/: ROC-Curves.ipynb
examples/example8/: Accuracy.ipynb  ROC-Curves.ipynb  ex8.csv
examples/example9/: multivariate_linear_lasso.ipynb
examples/special_example1/: Functional_t_test.ipynb
examples/special_example2/: Functional_corr_test.ipynb
frontend/: Dockerfile  next.config.js  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
statsmed/: qc_graphics.py  statsmed.py
tests/: qc_run_random_json.ipynb
web/: app.py  interface.py
web/templates/: base.html  home.html  upload.html
(+21 files in other folders)
